# Mini-KataGo

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pytest.yml  tests.yml
python/: minimax.py
python/go/: board.py  main.py  rules.py
scripts/: ci-local.sh
src/mini-katago/: board.py  main.py  player.py
src/mini_katago/: board.py  constants.py  main.py  mcts.py  minimax.py  minimax_tic_tac_toe.py  player.py  rules.py
src/mini_katago/data/: test_territories.sgf
tests/: test_board_rules.py
