[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-katago"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
ignore_missing_imports = true
